# stharrold-templates

./: .bmad-flattened.stats.md  .bmad-flattened.xml  .gitignore  .pre-commit-config.yaml  .sqlfluff  AGENTS.md  ARCHITECTURE.md  BUNDLES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  GEMINI.md  README.md  TODO.md  TODO_FOR_feat-12-integrate-workflow-secrets-bmad.md  TODO_FOR_feat-12-integrate-workflow-secrets-claude.md  TODO_FOR_feat-12-integrate-workflow-secrets-claude2.md  TODO_FOR_feat-12-integrate-workflow-secrets.md  WORKFLOW.md  azure-pipelines-secrets.yml  azure-pipelines.yml  commit_message.txt  mcp-manager.py  mcp_manager.py  pipeline_config.json  podman-compose.yml  pyproject.toml  secrets.toml  test_command_syntax.sh  test_content_duplication.sh  test_cross_references.sh  test_file_size.sh  test_mcp_deduplication.py  test_yaml_structure.sh  validate_documentation.sh
.agents/: CLAUDE.md  GEMINI.md
.agents/agentdb-state-manager/: GEMINI.md
.agents/bmad-planner/: README.md  SKILL.md
.agents/initialize-repository/: GEMINI.md
.agents/quality-enforcer/: GEMINI.md  SKILL.md
.agents/speckit-author/: GEMINI.md  README.md  SKILL.md
.agents/workflow-orchestrator/: GEMINI.md
.agents/workflow-utilities/: GEMINI.md  SKILL.md
.bmad-core/: install-manifest.yaml
.claude/: CLAUDE.md  commands.toml  settings.local.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/commands/: CLAUDE.md  workflow.md
.claude/skills/: CLAUDE.md  UPDATE_CHECKLIST.md
.gemini/: GEMINI.md  commands.toml
.gemini/commands/: GEMINI.md
.gemini/skills/: GEMINI.md  UPDATE_CHECKLIST.md
.github/: copilot-instructions.md
.github/workflows/: claude-code-review.yml  gemini-code-review.yml  gemini-dispatch.yml  gemini.yml  secrets-example.yml  tests.yml
.specify/: README.md
00_draft-initial/: 02_report-claude-context-workflow.md  04-1_claude-md-template.md  06_claude-workflows.md  07_agent-find-tool-workflows.md  10_report-autogen-dspy-architecture.md  13_report-baml-kuzu-graph-schema.md  14_report-agents-autogen-bmad-speckit-dspy-baml.md  15_report-ai-agent-workflow-architecture-optimization.md  17_ai-model-lifecycle-directory-structure.md  18_prompt-complexity-quantification.md  19_jupyter-to-marimo-conversion-guide.md  20_claude-preserve-state-todo-compact.md
10_draft-merged/: 11_GUIDE-MCP.md  12_GUIDE-CREDENTIALS.md  13_GUIDE-IMPLEMENTATION.md  CLAUDE.md
10_draft-merged/10_mcp/: 11_setup.md  12_servers.md  13_context-management.md  14_enterprise-search.md  15_troubleshooting.md  CLAUDE.md
ARCHIVED/: 20250906_00_agentic-code-development-tools.md  20250906_40_academic-pipeline-guide.py  20250906_50_academic-pipeline-guide.md  20250907_00_server-room-passage.md  20250907_01_passage-tokenized-json.json  20250907_10_Unified-Schema-Architectures.md  20250907_40_unified-pipeline-architecture.md  20250907_50_optimized-vector-pipeline.md  20250907_60_mcp-server-implementation.md  20250907_70_langgraph-mcp-adapter.md  20250907_80_complete-implementation-guide.md  20250907_90_simplified-search-strategy.md  20250907_99_gcp-implementation-strategy.md  20250907_Gemini-Cloud-Assist-GCP-Pipeline.md  20250908-gcp-pipeline-implementation.md  20250909T002044Z-report-github-to-mcp-server-research.md  20250909T020000Z-mcp-remove-all.sh  20250909T021303Z_mcp-remove.sh  20250909T140000Z_claude-terminal-vs-visual-studio-code.md  20250909T141000Z_report-file-format-transfer-context.md  20250910T190908Z_01_report-mcp-servers-agentic-development-2025.md  20250910T214000Z_Claude-Synced.command  20250910T214000Z_sync-mcp.sh  20250912T044027Z_mcp-vscode-backup.json  20250912T181241Z_03_report-claude-development-workflow.md  20250912T203000Z_TODO.md  20250912T234500Z_04-2_claude-md-template-missing-yaml.md  20250913T004037Z_11_GUIDE-MCP.md  20250913T004037Z_12_GUIDE-CREDENTIALS.md  20250913T004037Z_13_GUIDE-IMPLEMENTATION.md  20250913T160916Z_05_todo-for-ai-template.md  20250914T001321Z_08_report-secrets-mcp.md  20250914T174933Z_09_workflow-secrets-mcp.md  20250916T022005Z_TODO_FOR_feat-12-integrate-workflow-secrets-bmad.md  20250916T022005Z_TODO_FOR_feat-12-integrate-workflow-secrets-claude2.md  20250916T110030Z_TODO_FOR_feat-12-integrate-workflow-secrets-flow.md  20260131T161758Z_critical-assessment.md  20260613T210202Z_critical-assessment_workflow-slash-commands-to-skills.md  CLAUDE.md  GEMINI.md  (+1 more)
config/: catalog_config.json  config.dev.json  config.schema.json  foreign_keys_config.json  pipeline_config.json  primary_keys_config.json
data_catalog/: __init__.py  cli.py  exceptions.py
data_catalog/db/: __init__.py  (+3 more)
docs/: CLAUDE.md  GEMINI.md
memory/: memory-store.json
models/: Modelfile.qwen3-0.6b
release_lib/: __init__.py  bundles.py  semver.py
scripts/: apply_bundle.py  backfill_normalize_entities.py  environment_utils.py  generate_column_descriptions.py  install_user_skills.py  ollama_start.ps1  ollama_stop.ps1  pre_release_sanity.py  run.py  run_catalog_pipeline.py  run_entity_quality.py  run_pipeline.ps1  run_pipeline_incremental.py  secrets_run.py  secrets_setup.py
specs/: STATUS.md
src/: __init__.py  config_validator.py  deployer.py  environment_utils.py  execute_pipeline.py  file_writer.py  logger.py  query_runner.py  query_types.py  resumption.py  retry.py  slug_generator.py  sql_utils.py
tests/: CLAUDE.md  GEMINI.md  __init__.py  conftest.py  test_fk_discovery.py  test_grain_discovery.py  test_graph_metrics.py  test_mcp_deduplication.py  test_models.py  test_pipeline_orchestrator.py  test_rag_search.py  test_repositories.py
tools/: README.md  __init__.py
utils/: __init__.py  bench_compare.py  bench_log.py  core_db.py  core_embedder.py  core_formatter.py  core_llm.py  core_reranker.py  json_repair.py  pipe_01_ingest.py  pipe_02_verify.py  pipe_02b_strip.py  pipe_02c_threads.py  pipe_03_decompose.py  pipe_03b_normalize.py  pipe_04_vectorize.py  pipe_04b_consolidate.py  pipe_05_link.py  pipe_05b_cooccurrence.py  pipe_06_optimize.py  pipe_parallel.py  pipe_runner.py  rag_directives.py  rag_generate.py  tool_maintenance.py
(+696 files in other folders)
