# pyproject.toml for stharrold-templates
# Templates and utilities for MCP server configuration and agentic development workflows

[project]
name = "stharrold-templates"
version = "5.10.0"
description = "Templates and utilities for MCP server configuration and agentic development workflows"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.9.0", # Better terminal output
    "click>=8.1.0", # CLI framework
    "httpx>=0.27.0", # Modern HTTP client
    "duckdb>=1.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 170
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
# E: pycodestyle errors
# F: pyflakes
# I: isort
# N: pep8-naming
# W: pycodestyle warnings
# B: flake8-bugbear
# UP: pyupgrade
# Note: Q (flake8-quotes) removed - formatter handles quote style

ignore = ["E402"]
# E402: Module level import not at top of file
# Ignored because skill scripts use sys.path.insert before imports

[tool.ruff.lint.per-file-ignores]
"tools/**/*.py" = ["N999", "B007", "B904", "B905"]
".agents/**/*.py" = ["N999", "B007", "B904", "B905"]
".claude/**/*.py" = ["N999", "B007", "B904", "B905"]
"tests/**/*.py" = ["N999"]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.5.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]
