# pyproject.toml for stharrold-templates
# Templates and utilities for MCP server configuration and agentic development workflows

[project]
name = "stharrold-templates"
version = "9.1.1"
description = "Templates and utilities for MCP server configuration and agentic development workflows"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9.0", # Better terminal output
    "click>=8.1.0", # CLI framework
    "httpx>=0.27.0", # Modern HTTP client
    "duckdb>=1.4.2",
    "sqlalchemy>=2.0.0", # data_catalog ORM layer
    "duckdb-engine>=0.13.0", # SQLAlchemy dialect for duckdb:// URLs
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
    "integration: marks tests as integration tests requiring network/external services (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 170
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
# E: pycodestyle errors
# F: pyflakes
# I: isort
# N: pep8-naming
# W: pycodestyle warnings
# B: flake8-bugbear
# UP: pyupgrade
# Note: Q (flake8-quotes) removed - formatter handles quote style

ignore = ["E402"]
# E402: Module level import not at top of file
# Ignored because skill scripts use sys.path.insert before imports

[tool.ruff.lint.per-file-ignores]
".agents/**/*.py" = ["N999", "B007", "B904", "B905"]
".claude/**/*.py" = ["N999", "B007", "B904", "B905"]
"tests/**/*.py" = ["N999", "F841"]
# NetworkX / NumPy / scikit-learn convention: G for graph, X for feature matrix.
# These are domain-standard identifiers, not lint violations.
"data_catalog/services/graph_metrics.py" = ["N803", "N806"]
# B905 strict= param: backfill/migration scripts zip pre-validated lists of
# equal length (contract with the caller), adding strict= is noise.
"scripts/backfill_normalize_entities.py" = ["B905"]

[tool.uv]
dev-dependencies = [
    "keyring>=24.0.0",
    "pre-commit>=4.5.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
    "tomlkit>=0.13.3",
    # data_catalog.services test deps (module-level imports in embedding.py,
    # graph_metrics.py, vector_similarity.py, rag_search.py). Kept out of
    # runtime deps to avoid ~200MB ML bloat for users of the db/ layer only.
    "numpy>=1.26.0",
    "networkx>=3.2",
    "scipy>=1.13.0", # networkx.pagerank / eigenvector algorithms
    "onnxruntime>=1.18.0",
    "tokenizers>=0.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["specs*", "planning*", "docs*", "tests*", ".claude*", ".agents*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
